[package]
name = "diatom-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ansi-to-html = "0.1.2"
diatom = { version = "0.2.3", default-features = false }

